Make roswww compatible with python 2 and python 3
from pull request #49

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ find_package(catkin REQUIRED)
 catkin_package()
 catkin_python_setup()
 
-install(
+catkin_install_python(
   PROGRAMS script/webserver.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
